@@ -3,9 +3,6 @@ package com.dtstack.taier;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-
 public class ScriptJob implements Runnable {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(ScriptJob.class);
@@ -33,11 +30,6 @@ public class ScriptJob implements Runnable {
     private Process process;
 
     /**
-     * 日志打印
-     */
-    private StringBuilder logBuilder = new StringBuilder();
-
-    /**
      * 开始时间
      */
     private Long execStartTime;
@@ -53,27 +45,15 @@ public class ScriptJob implements Runnable {
         this.command = command;
     }
 
-    public ScriptJob() {}
+    public ScriptJob() {
+    }
 
     @Override
     public void run() {
         execStartTime = System.currentTimeMillis();
         try {
-            process = Runtime.getRuntime().exec(command);
+            Process process = Runtime.getRuntime().exec(new String[]{"sh", "-c", command});
             processId = ProcessUtil.getProcessId(process);
-
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            String line;
-            if ((line = reader.readLine()) != null) {
-                logBuilder.append(line);
-            }
-
-            BufferedReader errorReader = new BufferedReader(new InputStreamReader(process.getErrorStream()));
-            String errorLine;
-            if ((errorLine = errorReader.readLine()) != null) {
-                logBuilder.append(errorLine);
-            }
-
             int exitValue = process.waitFor();
             if (0 != exitValue) {
                 status = false;
@@ -94,10 +74,6 @@ public class ScriptJob implements Runnable {
 
     public Integer getProcessId() {
         return processId;
-    }
-
-    public StringBuilder getLogBuilder() {
-        return logBuilder;
     }
 
     public Long getExecEndTime() {
